--- a/public/templates/contacts.template.html
+++ b/public/templates/contacts.template.html
@@ -1,21 +1,19 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
 
-        <section>
-            <h2>Контакти</h2>
+        <div class="contact" style="padding-left: 300px; padding-right: 300px; padding-top: 150px;">
+        <section class="text-center" style="background-color: black; padding: 10px;">
+            <h1>Контакти</h1>
+            <ul>
+            <li>Пн-Сб: 10<sup>00</sup>-18<sup>00</sup></li>
+            <li>Вихідний: Неділя</li>
+            <li>(093) 11-11-111</li>
+            <li>(098) 11-11-111</li>
+            <li>(099) 11-11-111</li>
+            <li>wines@my-site.com.ua</li>
+            </ul>
         </section>
-
-    </div>
-    <div class="col-md-6">
-
-        <article>
-            <h2>Як нас знайти</h2>
-            <a href="#">33 коментарі</a>
-
-            <footer>
-                <a href="#">Читати далі</a>
-            </footer>
-        </article>
+        </div>
 
     </div>
 </div>
