--- a/public/templates/admin.template.html
+++ b/public/templates/admin.template.html
@@ -13,7 +13,7 @@
         <!----------------- MODAL WINDOW CONTENT---------------->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
+                <button type="button" class="close" data-dismiss="modal" ng-click="$ctrl.cancelModal()">
                     &times;
                 </button>
                 <h4 class="modal-title">
@@ -189,17 +189,17 @@
                             </label>
                             <div>
                             <input type="number" name="create_discount_quantity" id="create_discount_quantity1"
-                                   ng-model="$ctrl.create_discount[0].quantity" class="form-control input-sm"
+                                   ng-model="$ctrl.discount[0].quantity" class="form-control input-sm"
                             />
                             </div>
                             <div>
                             <input type="number" name="create_discount_quantity" id="create_discount_quantity2"
-                                   ng-model="$ctrl.create_discount[1].quantity" class="form-control input-sm"
+                                   ng-model="$ctrl.discount[1].quantity" class="form-control input-sm"
                             />
                             </div>
                             <div>
                             <input type="number" name="create_discount_quantity" id="create_discount_quantity3"
-                                   ng-model="$ctrl.create_discount[2].quantity" class="form-control input-sm"
+                                   ng-model="$ctrl.discount[2].quantity" class="form-control input-sm"
                             />
                             </div>
                         </div>
@@ -251,7 +251,7 @@
         <!----------------- MODAL WINDOW CONTENT---------------->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
+                <button type="button" class="close" data-dismiss="modal" ng-click="$ctrl.cancelModal()">
                     &times;
                 </button>
                 <h4 class="modal-title">
