--- a/public/templates/products.template.html
+++ b/public/templates/products.template.html
@@ -8,72 +8,72 @@
 
     <ui-view>
 
-<div class="col-md-3 col-sm-3 productsNavComponent text-center center-block">
+        <div class="col-md-3 col-sm-3 productsNavComponent text-center center-block">
 
-    <div class="navBlock">
-        <span class="col-md-12 winesNavHeader">Поиск</span>
-        <input type="text" id="searchField" name="search"
-               ng-model="$ctrl.search.name" ng-keyup="$ctrl.filterPage(1)">
-        <br><br>
-    </div>
-
-    <div class="navBlock">
-        <span class="col-md-12 winesNavHeader">Фильтры</span>
-        <h4>Фильтровать по цене:</h4><br/>
-        <span>{{ val1.start | currency: '₴ ' }}</span> грн. - <span>{{ val1.end | currency: '₴ ' }}</span> грн.
-        <slider-easy value="val1" option="option1"></slider-easy><br/>
-        <input type="submit" class="btn" id="searchButton" value="Фильтровать" ng-click="$ctrl.filterPage(1)"/>
-    </div>
-
-</div>
-
-<div class="col-md-9 text-center">
-        <!-- items being paged -->
-    <div class="products col-md-2 col-sm-2"
-         ng-repeat="item in $ctrl.items">
-        <img ng-src="{{$ctrl.main.path + 'get_image/' + item.id}}" alt="" class="center-block"
-        ui-sref="products.detailed({id: item.id})"/>
-
-        <div class="productsDescription" ui-sref="products.detailed({id: item.id})">
-            <h4>{{item.name}}</h4>
-            <span>Код товара: U22794</span>
-            <p>{{item.price | currency: '₴ '}} грн.</p>
+            <div class="navBlock">
+                <span class="col-md-12 winesNavHeader">Поиск</span>
+                <input type="text" id="searchField" name="search"
+                       ng-model="$ctrl.search.name" ng-keyup="$ctrl.filterPage(1)">
+                <br><br>
             </div>
 
-            <div class="productsAddToCartSection">
-            <ngcart-addtocart   id="{{ item.id }}"
-                                name="{{ item.name }}"
-                                price="{{ item.price }}"
-                                quantity="{{ item.min_quantity }}"
-                                quantity-min="{{ item.min_quantity }}"
-                                quantity-max="{{ item.max_quantity }}"
-                                discount="{{ item.price_dependencies }}">
-                                Add to Cart
-            </ngcart-addtocart>
-        </div>
-    </div>
-</div><br/>
+            <div class="navBlock">
+                <span class="col-md-12 winesNavHeader">Фильтры</span>
+                <h4>Фильтровать по цене:</h4><br/>
+                <span>{{ val1.start | currency: '₴ ' }}</span> грн. - <span>{{ val1.end | currency: '₴ ' }}</span> грн.
+                <slider-easy value="val1" option="option1"></slider-easy><br/>
+                <input type="submit" class="btn" id="searchButton" value="Фильтровать" ng-click="$ctrl.filterPage(1)"/>
+            </div>
 
-<div class="col-md-12 text-center">
-    <!-- pager -->
-    <ul ng-if="$ctrl.pager.pages.length" class="pagination">
-        <li ng-class="{disabledPagination:$ctrl.pager.currentPage === 1}">
-            <a ng-click="$ctrl.filterPage(1)">First</a>
-        </li>
-        <li ng-class="{disabledPagination:$ctrl.pager.currentPage === 1}">
-            <a ng-click="$ctrl.filterPage($ctrl.pager.currentPage - 1)">Previous</a>
-        </li>
-        <li ng-repeat="page in $ctrl.pager.pages" ng-class="{active:$ctrl.pager.currentPage === page}">
-            <a ng-click="$ctrl.filterPage(page)">{{page}}</a>
-        </li>
-        <li ng-class="{disabledPagination:$ctrl.pager.currentPage === $ctrl.pager.totalPages}">
-            <a ng-click="$ctrl.filterPage($ctrl.pager.currentPage + 1)">Next</a>
-        </li>
-        <li ng-class="{disabledPagination:$ctrl.pager.currentPage === $ctrl.pager.totalPages}">
-            <a ng-click="$ctrl.filterPage($ctrl.pager.totalPages)">Last</a>
-        </li>
-    </ul>
-</div>
+        </div>
+
+        <div class="col-md-9 text-center">
+                <!-- items being paged -->
+            <div class="products col-md-2 col-sm-2"
+                 ng-repeat="item in $ctrl.items">
+                <img ng-src="{{$ctrl.main.path + 'get_image/' + item.id}}" alt="" class="center-block"
+                ui-sref="products.detailed({id: item.id, quan: item.min_quantity})"/>
+
+                <div class="productsDescription" ui-sref="products.detailed({id: item.id, quan: item.min_quantity})">
+                    <h4>{{item.name}}</h4>
+                    <span>Код товара: U22794</span>
+                    <p>{{item.price | currency: '₴ '}} грн.</p>
+                    </div>
+
+                    <div class="productsAddToCartSection">
+                    <ngcart-addtocart   id="{{ item.id }}"
+                                        name="{{ item.name }}"
+                                        price="{{ item.price }}"
+                                        quantity="{{ item.min_quantity }}"
+                                        quantity-min="{{ item.min_quantity }}"
+                                        quantity-max="{{ item.max_quantity }}"
+                                        discount="{{ item.price_dependencies }}">
+                                        Add to Cart
+                    </ngcart-addtocart>
+                </div>
+            </div>
+        </div><br/>
+
+        <div class="col-md-12 text-center">
+            <!-- pager -->
+            <ul ng-if="$ctrl.pager.pages.length" class="pagination">
+                <li ng-class="{disabledPagination:$ctrl.pager.currentPage === 1}">
+                    <a ng-click="$ctrl.filterPage(1)">First</a>
+                </li>
+                <li ng-class="{disabledPagination:$ctrl.pager.currentPage === 1}">
+                    <a ng-click="$ctrl.filterPage($ctrl.pager.currentPage - 1)">Previous</a>
+                </li>
+                <li ng-repeat="page in $ctrl.pager.pages" ng-class="{active:$ctrl.pager.currentPage === page}">
+                    <a ng-click="$ctrl.filterPage(page)">{{page}}</a>
+                </li>
+                <li ng-class="{disabledPagination:$ctrl.pager.currentPage === $ctrl.pager.totalPages}">
+                    <a ng-click="$ctrl.filterPage($ctrl.pager.currentPage + 1)">Next</a>
+                </li>
+                <li ng-class="{disabledPagination:$ctrl.pager.currentPage === $ctrl.pager.totalPages}">
+                    <a ng-click="$ctrl.filterPage($ctrl.pager.totalPages)">Last</a>
+                </li>
+            </ul>
+        </div>
 
     </ui-view>
 </div>
