--- a/public/templates/products_grocery_olive_oil.template.html
+++ b/public/templates/products_grocery_olive_oil.template.html
@@ -16,13 +16,14 @@
         <br><br>
     </div>
 </div>
-<div class="col-md-9 col-sm-9 productsComponent">
+
+<div class="col-md-9 col-sm-9 text-center">
     <div class="products col-md-3 col-sm-3"
          ng-repeat="oil in $ctrl.main.groceries | filter: {type: 'olive oil'} | filter: $ctrl.query">
         <img ng-src="{{$ctrl.main.path + 'get_image/' + oil.id}}" alt="" class="center-block"
-             ui-sref="products.detailed({id: oil.id})"/>
+             ui-sref="products.detailed({id: oil.id, quan: oil.min_quantity})"/>
 
-        <div class="productsDescription" ui-sref="products.detailed({id: oil.id})">
+        <div class="productsDescription" ui-sref="products.detailed({id: oil.id, quan: oil.min_quantity})">
             <h4>{{oil.name}}</h4>
             <span>Код товара: U22794</span>
             <p>{{oil.price | currency: '₴ '}} грн.</p>
