--- a/public/templates/products_wines.template.html
+++ b/public/templates/products_wines.template.html
@@ -1,5 +1,6 @@
 <ui-view>
-<div class="col-md-3 col-sm-3 productsNavComponent text-center center-block">
+
+    <div class="col-md-3 col-sm-3 productsNavComponent text-center center-block">
 <span class="col-md-12 winesNavBackButton" ui-sref="products">
 <span class="glyphicon glyphicon-chevron-left"></span> Назад</span>
     <div class="navBlock">
@@ -26,11 +27,11 @@
 
 </div>
 
-    <div class="col-md-9 col-sm-9 productsComponent">
+    <div class="col-md-9 col-sm-9 text-center">
         <div class="products col-md-3 col-sm-3" ng-repeat="item in $ctrl.items">
             <img ng-src="{{$ctrl.main.path + 'get_image/' + item.id}}" alt="" class="center-block"
-                 ui-sref="products.detailed({id: item.id})"/>
-            <div class="productsDescription" ui-sref="products.detailed({id: item.id})">
+                 ui-sref="products.detailed({id: item.id, quan: item.min_quantity})"/>
+            <div class="productsDescription" ui-sref="products.detailed({id: item.id, quan: item.min_quantity})">
             <h4>{{item.name}}</h4>
             <span>Код товара: U22794</span>
             <p>{{item.price | currency: '₴ '}} грн.</p>
@@ -50,7 +51,7 @@
         </div>
     </div>
 
-    <div class="text-center">
+    <div class="col-md-12 text-center">
         <!-- pager -->
         <ul ng-if="$ctrl.pager.pages.length" class="pagination">
             <li ng-class="{disabledPagination:$ctrl.pager.currentPage === 1}">
