--- a/public/templates/products_wines_dry.template.html
+++ b/public/templates/products_wines_dry.template.html
@@ -14,13 +14,14 @@
         <br><br>
     </div>
 </div>
-<div class="col-md-9 col-sm-9 productsComponent">
+
+<div class="col-md-9 col-sm-9 text-center">
     <div class="products col-md-3 col-sm-3"
          ng-repeat="wine in $ctrl.main.wines | filter: {type: 'dry'} | filter: $ctrl.query">
         <img ng-src="{{$ctrl.main.path + 'get_image/' + wine.id}}" alt="" class="center-block"
-             ui-sref="products.detailed({id: wine.id})"/>
+             ui-sref="products.detailed({id: wine.id, quan: wine.min_quantity})"/>
 
-        <div class="productsDescription" ui-sref="products.detailed({id: wine.id})">
+        <div class="productsDescription" ui-sref="products.detailed({id: wine.id, quan: wine.min_quantity})">
             <h4>{{wine.name}}</h4>
             <span>Код товара: U22794</span>
             <p>{{wine.price | currency: '₴ '}} грн.</p>
