--- a/public/templates/vip.template.html
+++ b/public/templates/vip.template.html
@@ -1,21 +1,25 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 col-md-offset-3 text-center">
 
         <section>
-            <h2>Сторінка для VIP клієнтів</h2>
+            <form>
+                <fieldset style="border: 1px solid;padding: 20px;">
+                        <label for="name">Имя</label>
+                        <input type="text" id="name" class="form-control" style="margin-bottom: 10px;"/>
+
+                        <label for="email">Контакт (телефон или email)</label>
+                        <input type="text" id="email" class="form-control" style="margin-bottom: 10px;" />
+
+                        <label for="message">Ваш комментарий</label>
+                        <textarea id="message" cols="30" rows="5" class="form-control"
+                                  style="background-color: transparent; margin-bottom: 10px;"></textarea>
+
+                        <button class="btn btn-success" type="submit">Добавить комментарий</button>
+                </fieldset>
+            </form>
         </section>
 
     </div>
-    <div class="col-md-6">
 
-        <article>
-            <h2>Інформація для VIP клієнтів</h2>
-            <a class="comments" href="#">33 коментарі</a>
-
-            <footer>
-                <a href="#" class="button">Читати далі</a>
-            </footer>
-        </article>
-
-    </div>
+    <div class="col-md-12"></div>
 </div>
